syntax="proto3";

package account;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

import "account.proto";

option go_package = "./;account";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
		title: "Transaction service";
		version: "v1";
	};
    schemes: HTTP;
    schemes: HTTPS;
};

service TransactionService {
    rpc Create(CreateTransactionRequest) returns (CreateTransactionResponse) {
        option (google.api.http) = {
            post: "/api/v1/transactions"
            body: "*"
        };
    };
	rpc Delete(DeleteTransactionRequest) returns (DeleteTransactionResponse) {
        option (google.api.http) = {
            delete: "/api/v1/transactions/{id}"
        };
    };
    rpc Update(UpdateTransactionRequest) returns (UpdateTransactionResponse) {
		option (google.api.http) = {
            patch: "/api/v1/transactions/{transaction.id}"
            body: "*"
        };
	}
	rpc List(ListTransactionsRequest) returns (ListTransactionsResponse) {
        option (google.api.http) = {
            get: "/api/v1/transactions"
        };
    };
    rpc ListStream(ListTransactionsRequest) returns (stream Transaction) {
        option (google.api.http) = {
            get: "/api/v1/transactions/stream"
        };
    };
}

// transactions
enum TransactionType {
    UNKNOW = 0;
    WITHDRAW = 1;
    DEPOSIT = 2;
}

message Transaction {
    string id = 1;
    string account_id = 2;
    string user_id = 3;
    Bank bank = 4;
    double amount = 5;
    TransactionType transaction_type = 6;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

message CreateTransactionRequest {
    string user_id = 1;
    string account_id = 2;
    double amount = 3;
    TransactionType transaction_type = 4;
}

message CreateTransactionResponse {
	Transaction transaction = 1;
}

message ListTransactionsRequest {
    google.protobuf.StringValue user_id = 1 [
        (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
            pattern: "^[0-9A-F]{8}-[0-9A-F]{4}-4[0-9A-F]{3}-[89AB][0-9A-F]{3}-[0-9A-F]{12}$",
            title: "user_id",
            description: "User id",
            format: "uuid",
            example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""
        }
    ];
	google.protobuf.StringValue account_id = 2 [
        (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
            pattern: "^[0-9A-F]{8}-[0-9A-F]{4}-4[0-9A-F]{3}-[89AB][0-9A-F]{3}-[0-9A-F]{12}$",
            title: "id",
            description: "Transaction id",
            format: "uuid",
            example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""
        }
    ];
    google.protobuf.StringValue id = 3 [
        (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
            pattern: "^[0-9A-F]{8}-[0-9A-F]{4}-4[0-9A-F]{3}-[89AB][0-9A-F]{3}-[0-9A-F]{12}$",
            title: "id",
            description: "Transaction id",
            format: "uuid",
            example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""
        }
    ];
    google.protobuf.DoubleValue amount_min = 4;
    google.protobuf.DoubleValue amount_max = 5;
    // list users created after timestamp
    google.protobuf.Timestamp created_since = 6;
    // list users in duration from created_since
    google.protobuf.Duration older_then = 7;
}

message ListTransactionsResponse {
    repeated Transaction transactions = 1;
}

message UpdateTransactionRequest {
    Transaction transaction = 1;
    google.protobuf.FieldMask update_mask = 2;
}

message UpdateTransactionResponse {
	Transaction transaction = 1;
}

message DeleteTransactionRequest {
	google.protobuf.StringValue user_id = 1;
	google.protobuf.StringValue account_id = 2;
	google.protobuf.StringValue id = 3;
}

message DeleteTransactionResponse {
    repeated string ids = 1;
}